<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient_background">

    <TextView
        android:id="@+id/b_exit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/sair"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/welcome"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Olá, Joel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/avatar_chef"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:background="@drawable/shape_container_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:id="@+id/b_reservations"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/card_color"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/reservas"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/reservations"
                        android:layout_gravity="end"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/b_menu"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/card_color"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/cardapio"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/menu"
                        android:layout_gravity="end"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/b_profile"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/card_color"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/perfil"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/profile"
                        android:layout_gravity="end"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/b_about"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/card_color"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/sobre"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/about"
                        android:layout_gravity="end"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>